K8S_MIPT/k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: journal-test-pod
  labels:
    app: journal-system
    tier: testing
spec:
  containers:
  - name: journal-container
    image: journal-service:latest
    imagePullPolicy: Never
    ports:
    - containerPort: 5000
      name: http
    volumeMounts:
    - name: journal-storage
      mountPath: /application/journal
  volumes:
  - name: journal-storage
    emptyDir: {}
